--- a/public/lessons-content/crypto-ciphers.html
+++ b/public/lessons-content/crypto-ciphers.html
@@ -1,7 +1,7 @@
 <section class="content-block">
     <h2><i class="fas fa-info-circle" aria-hidden="true"></i> Introduction aux Chiffres Classiques</h2>
     <p>
-        Avant l'ère numérique, la cryptographie s'appuyait sur des méthodes manuelles. Ces techniques, bien que rudimentaires, ont posé les fondations de la <strong>cryptographie moderne</strong>. Elles se classent en deux familles distinctes :
+        Avant l'ère numérique, la cryptographie s'appuyait sur des méthodes manuelles. Ces techniques, bien que rudimentaires, ont posé les fondations de la cryptographie moderne. Elles se classent en deux familles distinctes :
     </p>
     <h3>La substitution</h3>
     <p>
@@ -18,7 +18,7 @@
         Puis lu ligne par ligne pour donner le chiffré : <code>BNOR OJU</code>.
     </p>
     <p>
-        Ces méthodes sont désignées sous le terme de "chiffres classiques" car <strong>ils</strong> ont été développés et utilisés bien avant l'avènement des algorithmes informatiques. Elles sont aujourd'hui considérées comme obsolètes en raison de leur vulnérabilité, mais leur étude reste essentielle pour comprendre l'évolution et les principes fondamentaux de la cryptographie moderne.
+        Ces méthodes sont désignées sous le terme de "chiffres classiques" car elles ont été développés et utilisés bien avant l'avènement des algorithmes informatiques. Elles sont aujourd'hui considérées comme obsolètes en raison de leur vulnérabilité, mais leur étude reste essentielle pour comprendre l'évolution et les principes fondamentaux de la cryptographie moderne.
     </p>
 </section>
 <section class="content-block">
@@ -49,12 +49,12 @@ Texte chiffré: DWWDTXH</code></pre>
     </p>
     <h3>Principe : la clé variable</h3>
     <p>
-        Contrairement au Chiffre de César qui utilise une clé numérique unique, Vigenère utilise une clé qui est un mot ou une phrase (par exemple, <code>SECRET</code>). Chaque lettre du message est chiffrée en utilisant une lettre correspondante de la clé. Si la clé est plus courte que le message, elle est répétée en boucle. La substitution varie donc d'une lettre à l'autre, ce qui rend l'analyse de fréquence classique inopérante au premier abord.
+        Contrairement au Chiffre de César qui utilise une clé numérique unique, Vigenère utilise une clé qui est un mot ou une phrase (par exemple, <code>SECRETS</code>). Chaque lettre du message est chiffrée en utilisant une lettre correspondante de la clé. Si la clé est plus courte que le message, elle est répétée en boucle. La substitution varie donc d'une lettre à l'autre, ce qui rend l'analyse de fréquence classique inopérante au premier abord.
     </p>
     <h3>Exemple de chiffrement</h3>
     <ul>
         <li><strong>Message :</strong> BONJOUR</li>
-        <li><strong>Clé :</strong> SECRET</li>
+        <li><strong>Clé :</strong> SECRETS</li>
     </ul>
     <p>
         Pour chiffrer, on répète la clé sous le message :
@@ -116,7 +116,7 @@ K, W, X, Y, Z : < 1%</code></pre>
 <section class="content-block">
     <h2><i class="fas fa-lock-open" aria-hidden="true"></i> Pourquoi les Chiffres Classiques sont Obsolets</h2>
     <p>
-        Bien que fascinants d'un point de vue historique, les chiffres classiques sont aujourd'hui totalement inutilisables. La principale raison est la puissance de calcul phénoménale des ordinateurs, qui a anéanti leur faible sécurité.
+        Bien que fascinants d'un point de vue historique, les chiffres classiques sont aujourd'hui totalement inutilisables. La principale raison est la puissance de calcul des ordinateurs, qui a anéanti leur faible sécurité.
     </p>
     <h3>L'attaque par la force brute</h3>
     <p>
