--- a/public/lessons-content/security-passwords.html
+++ b/public/lessons-content/security-passwords.html
@@ -19,7 +19,7 @@
     <h2><i class="fas fa-lock" aria-hidden="true"></i> Création d'un mot de passe robuste</h2>
     <h3 class="mt-6">Caractéristiques d'un bon mot de passe</h3>
     <p>
-        Un mot de passe robuste est votre meilleure défense. Voici ses caractéristiques principales :
+        Un mot de passe robuste est votre meilleure défense. Voici ses caractéristiques :
     </p>
     <ul>
         <li><strong>Longueur :</strong> Un mot de passe doit être long. Nous recommandons un minimum de 12 à 16 caractères. Chaque caractère supplémentaire augmente considérablement le temps nécessaire à un pirate pour le découvrir.</li>
@@ -29,7 +29,7 @@
     </ul>
     <h3>Techniques pour créer des mots de passe robustes et mémorisables</h3>
     <p>
-        Il peut sembler difficile de créer des mots de passe complexes et de s'en souvenir. La méthode de la <strong>phrase de passe</strong> est l'une des plus efficaces. Choisissez une phrase longue, facile à retenir pour vous, mais qui n'a pas de sens évident pour les autres, puis transformez-la.
+        Il peut sembler difficile de créer des mots de passe complexes et de s'en souvenir. La méthode de la phrase de passe est l'une des plus efficaces. Choisissez une phrase longue, facile à retenir pour vous, mais qui n'a pas de sens évident pour les autres, puis transformez-la.
     </p>
     <pre><code># Étape 1 : Choisir une phrase personnelle et longue
 "Mon chien s'appelle Rex, il est né en 2020 et aime les croquettes !"
